# portifolio_desafios

./: README.md  app.py  logic.py  pyproject.toml
app/static/css/: global.css
app/templates/: index.html  pag_exercicios.html
app/templates/blog/: blog.html
static/css/: global.css  style.css
templates/: blog.html  index.html  pag_exercicios.html
